--- a/src/resources/views/personnel.hbs
+++ b/src/resources/views/personnel.hbs
@@ -107,38 +107,73 @@
                                 </div>
                             </div>
                             <div class="ibox-content">
-                                <div class="">
-                                    <a class="btn btn-primary ">Thêm nhân sự</a>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <a class="btn btn-primary ">Thêm nhân sự</a>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <div id="editable_filter" class="dataTables_filter">
+                                            <label style="display: flex;">
+                                                <div style="text-align: center; margin:0.5rem">Search:</div>
+                                                <input type="search" class="form-control input-sm" placeholder=""
+                                                    aria-controls="editable">
+                                            </label>
+                                        </div>
+                                    </div>
                                 </div>
-                                <table class="table table-striped table-bordered table-hover " id="editable">
-                                    <thead>
-                                        <tr>
-                                            <th>Họ và tên</th>
-                                            <th>Avatar</th>
-                                            <th>Chức vụ</th>
-                                            <th>Số điện thoại</th>
-                                            <th>Ngày sinh</th>
-                                            <th>Ngày đăng kí</th>
-                                            <th>Hành động</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered table-hover " id="editable">
+                                        <thead>
+                                            <tr>
+                                                <th>Họ và tên</th>
+                                                <th>Avatar</th>
+                                                <th>Chức vụ</th>
+                                                <th>Số điện thoại</th>
+                                                <th>Ngày sinh</th>
+                                                <th>Ngày đăng kí</th>
+                                                <th>Hành động</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {{#each person }}
+                                            <tr class="gradeU">
+                                                <td>{{this.name}}</td>
+                                                <td>Avatar</td>
+                                                <td>{{this.role}}</td>
+                                                <td>{{this.phone}}</td>
+                                                <td class="center">{{formatDate this.dob}}</td>
+                                                <td class="center">{{formatDate this.createdAt}}</td>
+                                                <td class="center">
+                                                    <button type="button" class="btn btn-danger btn-sm btn-delete"
+                                                        data-id="{{this._id}}" data-bs-toggle="modal"
+                                                        data-bs-target="#deleteConfirmModal">
+                                                        Xóa
+                                                    </button>
 
-                                        <tr class="gradeU">
-                                            <td>Nguyễn Văn A</td>
-                                            <td>Avatar</td>
-                                            <td>SEO</td>
-                                            <td>0395229211</td>
-                                            <td class="center">01/01/2002</td>
-                                            <td class="center">25/06/2025</td>
-                                            <td class="center">
-                                                <button>Xoá</button>
-                                                <button>Sửa</button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-
-                                </table>
+                                                    <button data-toggle="modal" class="btn btn-primary  btn-delete"
+                                                        data-id="{{this._id}}" href="#modal-form">Xoá</button>
+                                                    <div id="modal-form" class="modal fade" aria-hidden="true">
+                                                        <div class="modal-dialog">
+                                                            <div class="modal-content">
+                                                                <div class="modal-body">
+                                                                    <h3 class="m-t-none m-b">Bạn có chắc muốn xóa
+                                                                        {{this.name}} không ? </h3>
+                                                                    <div class="modal-footer">
+                                                                        <button type="button" class="btn btn-default"
+                                                                            data-dismiss="modal">Đóng</button>
+                                                                        <button type="button" class="btn btn-primary"
+                                                                            id="confirmDelete">Xóa</button>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            {{/each}}
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -179,4 +214,33 @@
 
         </div>
     </div>
+
+
+    <form name="delete-personnel-form" method="POST"></form>
 </body>
+<script>
+    //logic xác nhận xoá
+    document.addEventListener("DOMContentLoaded", function () {
+        let deletePersonnelId = null;
+
+        // Khi bấm nút "Xóa", lấy _id của sản phẩm
+        document.querySelectorAll('.btn-delete').forEach(button => {
+            button.addEventListener('click', function () {
+                deletePersonnelId = this.getAttribute('data-id');
+            });
+        });
+
+        // Khi bấm "Xóa" trong modal, gửi request xóa
+        document.getElementById('confirmDelete').addEventListener('click', function () {
+            if (deletePersonnelId) {
+                // Tạo form ẩn để gửi yêu cầu xóa
+                const deleteForm = document.createElement('form');
+                deleteForm.method = 'POST';
+                deleteForm.action = `/manager/personnel/${deletePersonnelId}?_method=DELETE`;
+
+                document.body.appendChild(deleteForm);
+                deleteForm.submit();
+            }
+        });
+    });
+</script>
