--- a/src/resources/views/auth/register.hbs
+++ b/src/resources/views/auth/register.hbs
@@ -14,6 +14,12 @@
                 <input type="email" name="email" class="form-control" placeholder="Email" required="">
             </div>
             <div class="form-group">
+                <input type="phone" name="phone" class="form-control" placeholder="Số điện thoại" required="">
+            </div>
+            <div class="form-group">
+                <input type="date" name="dob" class="form-control" placeholder="Số điện thoại" required="">
+            </div>
+            <div class="form-group">
                 <input type="password" name="password" class="form-control" placeholder="Mật khẩu" required="">
             </div>
             <div class="form-group" style="display:none;">
