update path in manager

--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -39,7 +39,7 @@
                 <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Quản trị viên</span><span
                         class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
-                    <li><a href="manager">Quản lý nhân sự</a></li>
+                    <li><a href="/manager">Quản lý nhân sự</a></li>
                     <li><a href="graph_morris.html">Quản lý thợ ảnh</a></li>
                     <li><a href="graph_rickshaw.html">Quản lý khách hàng</a></li>
                     <li><a href="graph_chartjs.html">Quản lý Concept</a></li>
