--- a/src/resources/views/form_basic.hbs
+++ b/src/resources/views/form_basic.hbs
@@ -54,7 +54,7 @@
                                                 <select id="role" name="role">
                                                     <option value="admin"></option>
                                                     <option value="user">User</option>
-                                                    <option value="SEO">SEO</option>
+                                                    <option value="CEO">CEO</option>
                                                     <option value="manager">Manager</option>
                                                 </select>
                                             </div>
@@ -67,31 +67,47 @@
                                         </form>
                                     </div>
                                     <div class="col-sm-6">
-                                        <div class="text-center">
-                                            <small>Tổng quan nhân sự</small><br><br>
-                                            <div class="m-r-md inline">
-                                                <div style="display:inline;width:85px;height:85px;"><canvas width="85"
-                                                        height="85"></canvas><input type="text" value="75"
-                                                        class="dial m-r-sm" data-fgcolor="#1AB394" data-width="85"
-                                                        data-height="85"
-                                                        style="width: 46px; height: 28px; position: absolute; vertical-align: middle; margin-top: 28px; margin-left: -65px; border: 0px; background: none; font: bold 17px Arial; text-align: center; color: rgb(26, 179, 148); padding: 0px; appearance: none;">
+                                        <div class="ibox">
+                                            <div class="ibox-content">
+                                                <h2>Tổng quan nhân sự</h2>
+                                                <div class="text-center">
+                                                    <div id="sparkline1"><canvas width="140" height="140"
+                                                            style="display: inline-block; width: 140px; height: 140px; vertical-align: top;"></canvas>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="m-r-md inline">
-                                                <div style="display:inline;width:85px;height:85px;"><canvas width="85"
-                                                        height="85"></canvas><input type="text" value="25"
-                                                        class="dial m-r" data-fgcolor="#1AB394" data-width="85"
-                                                        data-height="85"
-                                                        style="width: 46px; height: 28px; position: absolute; vertical-align: middle; margin-top: 28px; margin-left: -65px; border: 0px; background: none; font: bold 17px Arial; text-align: center; color: rgb(26, 179, 148); padding: 0px; appearance: none;">
-                                                </div>
-                                            </div>
-                                            <div class="m-r-md inline">
-                                                <div style="display:inline;width:85px;height:85px;"><canvas width="85"
-                                                        height="85"></canvas><input type="text" value="50"
-                                                        class="dial m-r" data-fgcolor="#1AB394" data-width="85"
-                                                        data-height="85"
-                                                        style="width: 46px; height: 28px; position: absolute; vertical-align: middle; margin-top: 28px; margin-left: -65px; border: 0px; background: none; font: bold 17px Arial; text-align: center; color: rgb(26, 179, 148); padding: 0px; appearance: none;">
-                                                </div>
+                                        </div>
+                                        <div class="ibox">
+                                            <div class="ibox-content">
+                                                <h5>Alerts</h5>
+                                                <table class="table table-stripped small m-t-md">
+                                                    <tbody>
+                                                        <tr>
+                                                            <td class="no-borders">
+                                                                <i class="fa fa-circle text-navy" style="color: {{CEO.color}}"></i>
+                                                            </td>
+                                                            <td class="no-borders">
+                                                                CEO
+                                                            </td>
+                                                        </tr>
+                                                        <tr>`   
+                                                            <td>
+                                                                <i class="fa fa-circle text-navy" style="color: #56DFCF;"></i>
+                                                            </td>
+                                                            <td>
+                                                                Manager
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>
+                                                                <i class="fa fa-circle text-navy" style="color: #ADEED9;"></i>
+                                                            </td>
+                                                            <td>
+                                                                Admin
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
@@ -164,5 +180,6 @@
                     });
                 });
             </script>
+
 
 </body>
