--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -160,8 +160,7 @@ h5 {
   font-size: 12px; }
 
 .nav-header {
-  padding: 33px 25px;
-  background: url("patterns/header-profile.png") no-repeat; }
+  padding: 33px 25px; }
 
 .pace-done .nav-header {
   transition: all 0.5s; }
