update button 'quay lai'

--- a/src/resources/views/form_basic.hbs
+++ b/src/resources/views/form_basic.hbs
@@ -29,8 +29,10 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="ibox float-e-margins">
-                            <div class="ibox-title">
-                                <h5>Thêm</h5>
+                            <div class="ibox-title" style="display: flex;justify-content: space-between">
+                                <form method="GET" action="/manager">
+                                    <button class="btn">Quay lại</button>
+                                </form>
                                 <div class="ibox-tools">
                                     <a class="collapse-link">
                                         <i class="fa fa-chevron-up"></i>
