--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -3,7 +3,7 @@
         <ul class="nav metismenu" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element"> <span>
-                        <img alt="image" class="img-circle" src="/image/image.jpg" />
+                        <img alt="image" class="img-circle" width="50px" height="50px" src="/image/Sample_User_Icon.png" />
                     </span>
                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="clear"> <span class="block m-t-xs"> <strong
@@ -17,7 +17,7 @@
                             {{/if}}
                         </span> </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a href="profile.html">Hồ sơ</a></li>
+                        <li><a href="/profile">Hồ sơ</a></li>
                         <li><a href="contacts.html">Kết Nối</a></li>
                         <li><a href="mailbox.html">Hộp thư</a></li>
                         {{!-- <li class="divider"></li> --}}
