--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -22,7 +22,7 @@
                     <li>
                         <div class="dropdown-messages-box">
                             <a href="profile.html" class="pull-left">
-                                <img alt="image" class="img-circle" src="img/a7.jpg">
+                                <img alt="image" class="img-circle" src="/image/logo.jpg">
                             </a>
                             <div class="media-body">
                                 <small class="pull-right">46h ago</small>
@@ -37,7 +37,7 @@
                     <li>
                         <div class="dropdown-messages-box">
                             <a href="profile.html" class="pull-left">
-                                <img alt="image" class="img-circle" src="img/a4.jpg">
+                                <img alt="image" class="img-circle" src="/image/logo.jpg">
                             </a>
                             <div class="media-body ">
                                 <small class="pull-right text-navy">5h ago</small>
@@ -51,7 +51,7 @@
                     <li>
                         <div class="dropdown-messages-box">
                             <a href="profile.html" class="pull-left">
-                                <img alt="image" class="img-circle" src="img/profile.jpg">
+                                <img alt="image" class="img-circle" src="/image/logo.jpg">
                             </a>
                             <div class="media-body ">
                                 <small class="pull-right">23h ago</small>
