--- a/src/resources/views/partials/sidebar.hbs
+++ b/src/resources/views/partials/sidebar.hbs
@@ -50,13 +50,11 @@
             </li>
             {{!-- {{/if}} --}}
             <li>
-                <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mailbox
+                <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Hộp thư
                     </span><span class="label label-warning pull-right">16/24</span></a>
                 <ul class="nav nav-second-level collapse">
-                    <li><a href="mailbox.html">Inbox</a></li>
-                    <li><a href="mail_detail.html">Email view</a></li>
-                    <li><a href="mail_compose.html">Compose email</a></li>
-                    <li><a href="email_template.html">Email templates</a></li>
+                    <li><a href="/mailbox">Nhắn tin</a></li>
+                    <li><a href="mail_detail.html">Danh bạ</a></li>
                 </ul>
             </li>
             <li>
