--- a/src/resources/views/auth/register.hbs
+++ b/src/resources/views/auth/register.hbs
@@ -25,6 +25,9 @@
             <div class="form-group" style="display:none;">
                 <input type="text" name="role" class="form-control" value="user" required="">
             </div>
+            <div class="form-group" style="display:none;">
+                <input type="text" name="avatar" class="form-control" value="">
+            </div>
             <div class="form-group">
                 <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Đồng ý điều khoản và chính sách của HUGI
                     </label></div>
