--- a/src/resources/views/mail_compose.hbs
+++ b/src/resources/views/mail_compose.hbs
@@ -31,7 +31,7 @@
                                         <div class="clearfix"></div>
                                     </div>
                                     <div class="mail-body text-right tooltip-demo">
-                                        <a href="mailbox.html" class="btn btn-sm btn-primary"><i
+                                        <a href="/mailbox/chat" class="btn btn-sm btn-primary"><i
                                                 class="fa fa-reply"></i> Gửi</a>
                                         <a href="/mailbox" class="btn btn-danger btn-sm"><i class="fa fa-times"></i>
                                             Hủy</a>
