--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,300,500,700");
 /*
  *
- *   INSPINIA - Responsive Admin Theme
+ *   INSPINIA - git 
  *   version 2.3
  *
 */
