--- a/src/resources/views/personnel_edit.hbs
+++ b/src/resources/views/personnel_edit.hbs
@@ -48,8 +48,8 @@
                                             <div class="form-group">
                                                 <label>Avatar: </label>
                                                 <img src="/image/image.jpg" width="50" height="50" alt="Mô tả ảnh">
-                                                <button class="btn btn-info" data-toggle="modal" type="button"
-                                                    data-target="#change-image">Thay ảnh</button>
+                                                {{!-- <button class="btn btn-info" data-toggle="modal" type="button"
+                                                    data-target="#change-image">Thay ảnh</button> --}}
                                             </div>
                                             <div class="form-group"><label>Họ và tên</label> <input type="text"
                                                     name="name" class="form-control" value="{{personnelID.name}}"></div>
