--- a/src/resources/views/form_basic.hbs
+++ b/src/resources/views/form_basic.hbs
@@ -52,6 +52,9 @@
                                                     placeholder="Phone" name="phone" class="form-control"></div>
                                             <div class="form-group"><label>Ngày sinh</label> <input type="date"
                                                     name="dob" class="form-control"></div>
+                                            <div class="form-group" style="display:none;">
+                                                <input type="text" name="avatar" class="form-control" value="">
+                                            </div>
                                             <div class="form-group"><label>Chức vụ</label>
                                                 <select id="role" name="role">
                                                     <option value="admin"></option>
